--- a/www/public/index.html
+++ b/www/public/index.html
@@ -2,15 +2,17 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<title>zKillboard</title>
-	<link rel="stylesheet" href="https://unpkg.com/picnic">
-	<script async src="/js/z.js"></script>
-	<script async src="https://cdn.jsdelivr.net/npm/umbrellajs"></script>
+	<link rel="stylesheet" href="https://unpkg.com/picnic"/>
+	<link rel="stylesheet" href="/css/z.css"/>
+
 </head>
 <body>
-	Left Menu<br/>
-	Content<br/>
-	Footer<br/>
+	<div id="left"></div>
+	<div id="content"></div>
+	<div id="footer"></div>
 </body>
+<script async src="/js/z.js"></script>
+<script async src="https://cdn.jsdelivr.net/npm/umbrellajs"></script>
 </html>
