--- a/www/public/index.html
+++ b/www/public/index.html
@@ -4,15 +4,28 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<title>zKillboard</title>
-	<link rel="stylesheet" href="https://unpkg.com/picnic"/>
+
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@12.0.0/dist/lazyload.min.js"></script>
+
+	<!--<link rel="stylesheet" href="https://unpkg.com/picnic"/>-->
 	<link rel="stylesheet" href="/css/z.css"/>
 
 </head>
-<body>
-	<div id="left"></div>
-	<div id="content"></div>
-	<div id="footer"></div>
+<body class="dark">
+	<div class="wrapper">
+		<div id="left"></div>
+		<div id="content"></div>
+	</div>
+	<div class="push clear"></div>
+	<div id="footer"><footer class="footer"><small>
+<center>
+Brought to you by <a href="/character/1633218082">Squizz Caphinator </a></center>
+	<center data-toggle="tooltip" style="cursor: pointer; text-decoration: underline" title="EVE Online and the EVE logo are the registered trademarks of CCP hf. All rights are reserved worldwide. All other trademarks are the property of their respective owners. EVE Online, the EVE logo, EVE and all associated logos and designs are the intellectual property of CCP hf. All artwork, screenshots, characters, vehicles, storylines, world facts or other recognizable features of the intellectual property relating to these trademarks are likewise the intellectual property of CCP hf. CCP hf. has granted permission to evewho.com to use EVE Online and all associated logos and designs for promotional and information purposes on its website but does not endorse, and is not in any way affiliated with, evewho.com. CCP is in no way responsible for the content on or functioning of this website, nor can it be liable for any damage arising from the use of this website."> All Eve Related Materials are Property of CCP Games</center></small></footer></div>
 </body>
 <script async src="/js/z.js"></script>
-<script async src="https://cdn.jsdelivr.net/npm/umbrellajs"></script>
+<!--<script async src="https://cdn.jsdelivr.net/npm/umbrellajs"></script>-->
 </html>
