implemented websockets - client side

--- a/www/public/index.html
+++ b/www/public/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/css/z.css" />
 </head>
 
-<body class="dark">
+<body class="daark">
     <div class="wrapper">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="/">zKillboard.com</a>
@@ -29,6 +29,7 @@
                 <div id="overview-information"></div>
                 <div id="overview-statistics"></div>
                 <div id="overview-menu"></div>
+                <div class="clear"></div>
                 <div id="overview-killmails"></div>
                 <div id="overview-weekly"></div>
             </div>
@@ -53,7 +54,8 @@
         </footer>
     </div>
 </body>
-<script async src="/js/z.js"></script>
+<script src="/js/reconnecting-websocket.js"></script>
+<script src="/js/z.js"></script>
 <!--<script async src="https://cdn.jsdelivr.net/npm/umbrellajs"></script>-->
 
 </html>
