--- a/www/public/index.html
+++ b/www/public/index.html
@@ -17,7 +17,7 @@
 <body class="daark">
     <div class="wrapper">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="/">zKillboard.com</a>
+            <a class="navbar-brand" href="/">zKillboard</a>
             <ul class="navbar-nav mr-auto">
             </ul>
             <form class="form-inline my-2 my-lg-0">
